--- a/src/style.css
+++ b/src/style.css
@@ -250,7 +250,7 @@ nav.icons-row {
   width: 100%;
   height: 100%;
   display: flex;
-  align-items: center;
+  align-items: end;
   justify-content: center;
   background-color: rgba(10, 10, 10, 0.85);
   z-index: 100;
@@ -258,9 +258,9 @@ nav.icons-row {
   transition: opacity 0.5s ease, visibility 0.5s ease;
 }
 
-.audio-prompt-content {
+.audio-prompt-content{
   color: #BEC2CB;
-  font-size: 1.5rem;
+  font-size: 1rem;
   padding: 20px;
   text-align: center;
   animation: pulse 2s infinite;
