--- a/src/style.css
+++ b/src/style.css
@@ -8,17 +8,6 @@ html, body {
   overflow: hidden;
 }
 
-@supports (-webkit-touch-callout: none) {
-  body {
-    padding-top: env(safe-area-inset-top);
-    min-height: -webkit-fill-available;
-  }
-
-  .content-container {
-    padding-bottom: env(safe-area-inset-bottom);
-  }
-}
-
 @media (prefers-reduced-motion: reduce) {
   *, *::before, *::after {
     animation: none !important;
@@ -50,6 +39,7 @@ html, body {
   height: 100%;
 }
 
+.top-overflow,
 .bottom-overflow,
 .left-overflow,
 .right-overflow {
@@ -57,6 +47,13 @@ html, body {
   opacity: 0;
 }
 
+.top-overflow {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 25vh;
+  background: linear-gradient(180deg, #0A0A0A, rgba(10, 10, 10, 0.5), rgba(10, 10, 10, 0.1));
+}
 .bottom-overflow {
   bottom: 0;
   left: 0;
